table created on UI for movies using GET method

--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -5,6 +5,17 @@
     <title>Title</title>
 </head>
 <body>
+<p>In movie page</p>
 
+<table border="1">
+  <tr *ngFor="let movie of movies">
+    <td>
+      {{movie.title}}
+    </td>
+    <td>
+      {{movie.director}}
+    </td>
+  </tr>
+</table>
 </body>
 </html>
