--- a/src/app/movies/movie.new.component.html
+++ b/src/app/movies/movie.new.component.html
@@ -2,7 +2,7 @@
 <div class="col-xs-8 col-xs-offset-2">
 
 
-    <form  class="form-horizontal ng-scope ng-pristine ng-valid" (ngSubmit)="addMovie()">
+    <form  class="form-horizontal ng-scope ng-pristine ng-valid" >
       <div class="ng-scope">
         <div class="form-group ng-scope">
           <label for="title" class="col-sm-2 control-label">Title</label>
@@ -36,7 +36,7 @@
 
         <div class="form-group ng-scope">
           <div class="col-sm-offset-2 col-sm-10">
-            <input type="submit" class="btn btn-primary" value="Save">
+            <input type="button" class="btn btn-primary" (click)="addMovie()" value="Save">
           </div>
         </div>
       </div>
