--- a/src/app/movies/movie.details.component.html
+++ b/src/app/movies/movie.details.component.html
@@ -2,28 +2,28 @@
   <table class="table movietable ng-scope">
     <tbody>
     <tr>
-      <td><h3 class="ng-binding">Details for Bill and Ted's Excellent Adventure</h3></td>
+      <td><h3 class="ng-binding">Details for {{movie.title}}</h3></td>
       <td></td>
     </tr>
     <tr>
       <td>Movie Title</td>
-      <td class="ng-binding">Bill and Ted's Excellent Adventure</td>
+      <td class="ng-binding">{{movie.title}}</td>
     </tr>
     <tr>
       <td>Director</td>
-      <td class="ng-binding">Stephen Herek</td>
+      <td class="ng-binding">{{movie.director}}</td>
     </tr>
     <tr>
       <td>Release Year</td>
-      <td class="ng-binding">1990</td>
+      <td class="ng-binding">{{movie.releaseYear}}</td>
     </tr>
     <tr>
       <td>Movie Genre</td>
-      <td class="ng-binding">Comedy</td>
+      <td class="ng-binding">{{movie.genre}}</td>
     </tr>
     </tbody>
   </table>
   <div class="ng-scope">
-    <a class="btn btn-primary" ui-sref="editMovie({id:movie._id})" href="#/movies/29215/edit">Edit</a>
+    <a class="btn btn-primary" (click)="editMovie(movie._id)">Edit</a>
   </div>
 </div>
