--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   </nav>
 </header>
 <main>
-  <h1>Hello from {{api.title}}!</h1>
+ <!-- <h1>Hello from {{api.title}}!</h1>-->
 
   <!-- Images (and assets) are parsed and loaded from within the public directory -->
 
