--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 <p>In movie page</p>
 
 <a class="btn-primary btn-lg nodecoration" (click)="createNewMovie()">Add New Movie</a>
@@ -15,13 +8,11 @@
     <td><h3>All Movies</h3></td>
     <td></td>
   </tr>
-  <!-- ngRepeat: movie in movies --><tr *ngFor="let movie of movies" >
+  <tr *ngFor="let movie of movies" >
     <td class="ng-binding">{{movie.title}}</td>
     <td>
       <a class="btn btn-primary" (click)="gotoMovieDetails(movie._id)" >View</a>
       <a class="btn btn-danger" (click)="deleteMovie(movie._id); false">Delete</a>
     </td>
-  </tr><!-- end ngRepeat: movie in movies -->
+  </tr>
   </tbody></table>
-</body>
-</html>
