--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <a [routerLink]="['']">Home</a>
     <a [routerLink]="['about']">About</a>
     <a [routerLink]="['movies']">Movies</a>
+    <a [routerLink]="['google']">Google</a>
   </nav>
 </header>
 <main>
